gcc/testsuite/rust/rustc/ui/trait-bounds/issue-119530-sugg-from-fn_dg.rs
fn foo() -> String { String::new() }

fn main() {
    let string_arr = [foo(); 64]; // { dg-error ".E0277." "" { target *-*-* } }
}

